express/code/blocks/print-product-detail/print-product-detail.css
/* ... */
/* END PRODUCT IMAGES SECTION CONTENT */

/* CHECKOUT BUTTON */
.pdpx-checkout-button-container {
  position: sticky;
  bottom: 0;
  background: var(--color-white);
  margin-top: var(--spacing-200);
  width: 100%;
  order: 4;
  a.pdpx-checkout-button {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin-bottom: var(--spacing-100);
    background-color: var(--color-background-accent-default);
    color: var(--color-white);
    border: none;
    border-radius: 24px;
    padding: 13px;
    cursor: pointer;
  }
}
.pdpx-checkout-button-container::before {
  content: '';
  position: absolute;
  bottom: 100%;
  left: 0;
  right: 0;
  height: var(--spacing-900);
  pointer-events: none;
  background: linear-gradient(to top, white 20%, rgba(255, 255, 255, 0) 100%);
}
.pdpx-checkout-button-text {
  font-size: 18px;
  font-weight: 700;
}
.pdpx-checkout-button-subhead {
  display: none;
  flex-direction: row;
  align-items: end;
  flex-wrap: wrap;
  justify-content: center;
  gap: var(--spacing-75);
}
.pdpx-checkout-button-subhead-image {
  margin-bottom: 1px;
}
main .pdpx-checkout-button-subhead a.pdpx-checkout-button-subhead-link {
  white-space: nowrap;
  color: var(--color-black);
  font-weight: 400;
  text-decoration: underline;
}
.pdpx-checkout-button-subhead-text {
  text-align: right;
}

.pdpx-checkout-button-disabled a.pdpx-checkout-button {
  background-color: var(--color-dark-gray);
  border-radius: 10px;
  cursor: not-allowed;
  pointer-events: none;
  font-weight: 400;
  span.pdpx-checkout-button-text {
    font-size: 16px;
    font-weight: 400;
  }
}
.pdpx-assurance-lockup-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-300);
  padding: var(--spacing-100) 0;
  background-color: var(--color-gray-100);
  margin-bottom: var(--spacing-400);
  border-radius: 8px;
  .pdpx-assurance-lockup-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--spacing-100);
    width: 50%;
    justify-content: center;
  }
}
/* END CHECKOUT BUTTON */

/* PILL SELECTOR */
.pdpx-pill-selector-container {
  margin-bottom: var(--spacing-400);
  overflow: visible;
  .pdpx-pill-selector-label-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: var(--spacing-100);
    .pdpx-pill-selector-label-label {
      font-weight: 700;
    }
  }
}
.pdpx-pill-selector-label {
  display: block;
  font-weight: 700;
  margin-bottom: var(--spacing-100);
}
.pdpx-pill-selector-options-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: var(--spacing-100);
}
.pdpx-pill-container {
  display: flex;
  flex-direction: row;
  min-width: 150px;
  background-color: white;
  overflow: hidden;
  border-radius: 8px;
  border: 1px solid var(--color-gray-300-variant);
  padding: 0px;
  cursor: pointer;
}
.pdpx-pill-image-container {
  width: 54px;
  height: 54px;
}
.pdpx-pill-image {
  width: 100%;
}
.pdpx-pill-text-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  min-width: 92px;
  gap: var(--spacing-75);
  padding: var(--spacing-100);
  padding-right: var(--spacing-400);
}
.pdpx-pill-text-name {
  font-size: 14px;
  font-weight: 700;
  color: black;
}
.pdpx-pill-text-price {
  font-size: 14px;
  font-weight: 400;
  color: var(--color-dark-gray);
}

/* DRAWER */
.pdpx-size-chart-container {
  overflow-y: scroll;
}
.pdpx-drawer-hero-image-container {
  aspect-ratio: 3 / 2;
  width: 100%;
  overflow: hidden;
  flex-shrink: 0;
  margin-bottom: var(--spacing-400);
  .pdpx-drawer-hero-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: bottom;
    border-radius: 8px;
  }
}
.pdpx-drawer-title-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--spacing-100);
  .pdpx-drawer-title {
    font-size: 20px;
    font-weight: 700;
  }
  .pdpx-recommended-badge {
    font-size: var(--body-font-size-xs);
    color: white;
    padding: 4px 9px;
    line-height: 1.3;
    border-radius: 7px;
    background-color: #3b63fb;
  }
}
.pdpx-drawer-pills-container {
  display: flex;
  gap: var(--spacing-100);
  margin-bottom: var(--spacing-300);
  .pdpx-drawer-pill {
    border-radius: 8px;
    padding: var(--spacing-75) var(--spacing-100);
    background-color: var(--color-gray-150);
    display: flex;
    align-items: center;
    font-size: var(--body-font-size-s);
    gap: 4px;
  }
}

main .section .pdpx-drawer-description {
  font-size: 14px;
  font-weight: 400;
  margin-bottom: var(--spacing-300);
  p {
    font-size: 14px;
    font-weight: 400;
    margin: 0;
    margin-top: 0px;
    margin-bottom: 0px;
    padding: 0;
  }
}
.pdpx-drawer-foot {
  display: flex;
  border-top: 1px solid var(--color-gray-325);
  padding: var(--spacing-200);
  justify-content: space-between;
  background-color: var(--color-white);
  flex-shrink: 0;
  .pdpx-drawer-foot-info-container {
    display: flex;
    align-items: center;
    gap: var(--spacing-200);
  }
  .pdpx-drawer-foot-info-container img {
    width: 48px;
    border-radius: 4px;
  }
  .pdpx-drawer-foot-info-name {
    font-weight: 700;
    line-height: 1.3;
    padding-bottom: 2px;
  }
  .pdpx-drawer-foot-info-price {
    font-size: var(--body-font-size-s);
    line-height: 1.3;
  }
  .pdpx-drawer-foot-select-button {
    color: var(--color-white);
    background-color: var(--color-background-accent-default);
    padding: var(--spacing-200) var(--spacing-400);
    border-radius: 24px;
    border: none;
    font-family: var(--body-font-family);
    font-weight: 700;
    font-size: var(--body-font-size-l);
    cursor: pointer;
  }
}
/* ... */

